plugins {
	id 'application'
	id 'eclipse'
}

group = 'org.virginiaso'
version = '0.0.1'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.apache.commons:commons-csv:1.9.0'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.apache.commons:commons-text:1.9'
	implementation 'com.google.code.gson:gson:2.8.8'
	implementation 'javax.mail:javax.mail-api:1.6.2'
	implementation 'com.sun.mail:javax.mail:1.6.2'
	implementation 'org.apache.poi:poi-ooxml:5.0.0'
	implementation 'org.jsoup:jsoup:1.14.2'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}

tasks.withType(JavaCompile) {
	options.compilerArgs += '-Xlint:all'
}

application {
	mainClass = 'org.virginiaso.roster_diff.App'
}

task diffRosters(type: JavaExec) {
	dependsOn 'classes'
	mainClass = 'org.virginiaso.roster_diff.App'
	classpath = sourceSets.main.runtimeClasspath
	systemProperty 'mail.password', "$mailPassword"
}

task getPortalRoster(type: JavaExec) {
	dependsOn 'classes'
	mainClass = 'org.virginiaso.roster_diff.PortalRetriever'
	classpath = sourceSets.main.runtimeClasspath
	systemProperty 'portal.password', "$portalPassword"
}

task getScilympiadRoster(type: JavaExec) {
	dependsOn 'classes'
	mainClass = 'org.virginiaso.roster_diff.ScilympiadRetriever'
	classpath = sourceSets.main.runtimeClasspath
	systemProperty 'scilympiad.password', "$scilympiadPassword"
}

task sendTestEmail(type: JavaExec) {
	dependsOn 'classes'
	mainClass = 'org.virginiaso.roster_diff.Emailer'
	classpath = sourceSets.main.runtimeClasspath
	systemProperty 'mail.password', "$mailPassword"
}

tasks.named('test') {
	useJUnitPlatform()
}
